# AlphaOS

./: .env.example  .gitignore  FABLE_REVIEW_PACKET.md  FABLE_REVIEW_RESPONSE.md  HANDOVER.md  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
alphaos/: __init__.py  __main__.py  approval.py  constants.py  orchestrator.py  relabel.py  safety.py
alphaos/ab_eval/: __init__.py  corpus.py  replay.py  run.py
alphaos/ai/: __init__.py  bear_debater.py  claude_reviewer.py  label_validation.py  labeller_health.py  last30days_polarity.py  openai_client.py  playbook_classifier.py  prompt_templates.py  validation.py
alphaos/api/: __init__.py  __main__.py  app.py  deps.py  nonce.py  pin.py  routes.py  security.py  write_routes.py
alphaos/attribution/: __init__.py  batch.py  discovery.py  resolve.py
alphaos/baseline/: __init__.py  rules.py  tracker.py
alphaos/broker/: __init__.py  alpaca_client.py  order_mapping.py
alphaos/canary/: __init__.py  corpus.py  run.py
alphaos/cards/: __init__.py  catalyst_momentum_v1.yaml  catalyst_momentum_v2.yaml  demotion.py  materialize.py  per_evidence.py  post_earnings_reaction_v1.yaml  promotion.py  registry.py  scoreboard.py  selector.py  setup_evidence.py
alphaos/config/: __init__.py  settings.py
alphaos/dashboard/: __init__.py  console_theme.py  streamlit_app.py
alphaos/data/: __init__.py  atr.py  freshness_guard.py  intraday_volume_curve.py  market_data.py
alphaos/debate/: __init__.py  batch.py
alphaos/earnings/: __init__.py  alpha_vantage_client.py  earnings_enricher.py  earnings_provider.py
alphaos/eval/: __init__.py  corpus.py  harness.py
alphaos/execution/: __init__.py  costs.py  exit_rules.py  mfe_mae_backfill.py  order_manager.py  order_schema.py  position_manager.py  protection_watchdog.py
alphaos/hypotheses/: __init__.py  constants.py  generator.py  proposer.py  queries.py  registry.py  resolver.py
alphaos/journal/: __init__.py  journal_store.py  schema.py
alphaos/learning/: __init__.py  outcomes_engine.py  outcomes_tracker.py
alphaos/lineage/: __init__.py  builder.py  config_snapshot.py  git_info.py  hashing.py  versions.py
alphaos/news/: __init__.py  benzinga_client.py  catalyst_enricher.py  news_service.py  official_news_provider.py  web_news_client.py
alphaos/notifications/: __init__.py  ntfy_client.py
alphaos/proposals/: __init__.py  ttl.py
alphaos/regime/: __init__.py  classifier.py  service.py
alphaos/reports/: __init__.py  ab_eval_report.py  atr_service.py  attribution.py  autonomy_readiness.py  backup_health.py  baseline_report.py  benchmark_capture.py  broker_recon.py  canary_report.py  cost_calibration.py  daily_brief.py  daily_recon.py  decision_lineage.py  earnings_calendar_service.py  eval_report.py  governance_report.py  hypothesis_report.py  journal_feed.py  metrics.py  outcomes_summary.py  position_health.py  regime_arming_scorer.py  relative_performance.py  tqs_report.py  trade_packet.py  weekly_review.py
alphaos/research/: __init__.py  last30days_enricher.py  last30days_provider.py
alphaos/risk/: __init__.py  risk_engine.py
alphaos/scanner/: __init__.py  candidate_packet.py  candidate_scanner.py  interest_scanner.py  scan_context.py
alphaos/scheduler/: __init__.py  cadence.py  cost_guard.py  digest.py  job_runner.py  jobs.py  shadow_label.py
alphaos/stats/: __init__.py  bootstrap.py  effective_n.py  fdr.py  preregistration.py  two_arm.py
alphaos/strategy/: __init__.py  daytrade_experiment.py  proposal.py  swing_strategy.py
alphaos/text_archive/: __init__.py  forms.py  sec_edgar.py  service.py
alphaos/tqs/: __init__.py  batch.py  inputs.py  scoring.py
alphaos/universe/: __init__.py  builder.py  shadow_universe.json
alphaos/util/: __init__.py  alerts.py  ids.py  market_calendar.py  structured_json.py  timeutils.py
connectors/: __init__.py
connectors/deferred/: DEFERRED.md  __init__.py  benzinga.py  massive.py  web_news.py
console/: README.md  index.html  package-lock.json  package.json  vite.config.js
data/: .gitkeep
deploy/: backup_ledger.sh  com.ck.alphaos.backup.plist  com.ck.alphaos.console.plist  com.ck.alphaos.heartbeat.plist  com.ck.alphaos.scheduler.plist  install_launchagent.sh  run_dashboard.sh  tailscale_console_env.sh  uninstall_launchagent.sh
docs/: ALPHAOS_MASTER_REFERENCE.md
scripts/: shadow_saturation_audit.py
tests/: conftest.py  test_ab_eval.py  test_ai_token_usage.py  test_alerts.py  test_alpaca_data_rel_volume.py  test_alpaca_freshness.py  test_alpaca_paper_execution.py  test_api_console.py  test_api_console_nd2.py  test_api_console_nd3.py  test_api_console_nd4.py  test_api_console_nd8.py  test_approval_execution.py  test_approval_manual.py  test_armed_watch.py  test_atr.py  test_atr_service.py  test_attribution.py  test_attribution_flow.py  test_attribution_report.py  test_auto_mode_limits.py  test_backup_health.py  test_backup_ledger.py  test_baseline.py  test_benchmark_capture.py  test_canary.py  test_candidate_packet.py  test_card_selector.py  test_catalyst_enricher.py  test_catalyst_flow.py  test_config_and_schema.py  test_config_validation.py  test_console_theme.py  test_cost_calibration.py  test_cost_guard.py  test_costs.py  test_daily_brief.py  test_dashboard.py  test_daytrade_separation.py  test_decision_override.py  (+84 more)
(+152 files in other folders)
